# cawk

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README.txt  ast.h  cawk.cc  cawk.h  grammar.txt  lexer.h  main.cc  main.cpp  man.txt  parser.h  todo.txt  token.h  token_type.h
cawk/: CMakeLists.txt  main.cpp
cawk-test/: cawk-test.go  go.mod
cawk/lib/: CMakeLists.txt
cawk/test/: a-format.awk  concat-assign-same.awk  decr-NF.awk  fmt-overflow.awk
cir/: notes.txt
include/: ast.h  cawk.h  code_gen.h  lexer.h  parser.h  sema.h  token_type.h
include/AST/: AST.h  ASTDepthFinder.h  ASTPrinter.h  ASTVisitor.h  Decl.h  RecursiveASTVisitor.h
include/Basic/: Diagnostic.def  Diagnostic.h  OperatorPrecedence.h  SourceLocation.h  TokenKinds.def  TokenKinds.h
include/CodeGen/: CodeGen.h  Type.h
include/Exec/: Exec.h  Format.h  FunctionSymbol.h  IO.h  Index.h  Split.h  Sprintf.h  SymbolTable.h  Value.h
include/Frontend/: CommandLine.h  Instance.h
include/Lexer/: Lexer.h  Token.h
include/Parse/: Parser.h
include/Sema/: FunctionSymbol.h  Resolver.h  Sema.h  SemaControlFlow.h  SemaDecl.h  SemaLValue.h  SemaType.h  SymbolResolver.h  Type.h
include/Support/: Format.h  ScopeExit.h  Sequence.h  SourceSpan.h  StringMap.h  Support.h
include/sema/: scope.h  sema.h
lib/: CMakeLists.txt
lib/AST/: Decl.cpp
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  OperatorPrecedence.cpp  TokenKinds.cpp
lib/Exec/: CMakeLists.txt  Exec.cpp  Format.cpp  IO.cpp  Index.cpp  (+2 more)
scripts/: main.awk
src/: cawk.cc
test/: a-format.awk  concat-assign-same.awk  fs-overflow.awk
(+94 files in other folders)
